--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.3.0",
+    "gitart-vue-dialog": "^2.4.0",
+    "qrcode-reader-vue3": "^3.1.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
