--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-pwa": "^0.13.1"
   }
 }
